--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<pre>page = {{ job | json }}</pre>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-offset-2 col-xs-8">
+      <widget-job
+        *ngIf="job"
+        thumbnail="true"
+        horizontal="true"
+        [job]="job">
+      </widget-job>
+    </div>
+  </div>
+</div>
