--- a/src/app/components/job-thumbnail-horizontal/job-thumbnail-horizontal.component.less
+++ b/src/app/components/job-thumbnail-horizontal/job-thumbnail-horizontal.component.less
@@ -8,18 +8,26 @@
   background-color: #fff;
   padding: 20px 0;
 
-  .job__logo {
+  > .logo {
     width: 15%;
     text-align: center;
     vertical-align: middle;
 
-    img {
-      min-width: 60px;
-      min-height: 60px;
+    a {
+      &:hover,
+      &:focus {
+        cursor: pointer;
+        text-decoration: none;
+      }
+
+      img {
+        max-width: 60px;
+        max-height: 60px;
+      }
     }
   }
 
-  .job__info {
+  > .info {
     width: 20%;
     display: flex;
     flex-direction: column;
@@ -41,14 +49,14 @@
       color: @text-muted;
 
       &:hover,
-      a:focus {
+      &:focus {
         color: @brand-primary;
         text-decoration: none;
       }
     }
   }
 
-  .job__description {
+  > .description {
     width: 65%;
 
     h4 {
@@ -56,6 +64,19 @@
 
       a:hover,
       a:focus {
+        cursor: pointer;
+        text-decoration: none;
+      }
+    }
+
+    .company {
+      color: @text-color;
+      font-weight: bold;
+
+      &:hover,
+      &:focus {
+        color: @brand-primary;
+        cursor: pointer;
         text-decoration: none;
       }
     }
