adds 'host' selector

--- a/src/app/components/job-thumbnail-horizontal/job-thumbnail-horizontal.component.less
+++ b/src/app/components/job-thumbnail-horizontal/job-thumbnail-horizontal.component.less
@@ -1,12 +1,12 @@
 @import "../../../assets/styles/bootstrap/variables.less";
 
-.job {
+:host {
   display: flex;
   align-items: center;
   border: none;
   border-bottom: solid thin @gray-lighter;
   background-color: #fff;
-  padding: 20px 0;
+  padding: 20px 0;;
 
   > .logo {
     width: 15%;
