removes extra semi-column

--- a/src/app/components/job-thumbnail-horizontal/job-thumbnail-horizontal.component.less
+++ b/src/app/components/job-thumbnail-horizontal/job-thumbnail-horizontal.component.less
@@ -6,7 +6,7 @@
   border: none;
   border-bottom: solid thin @gray-lighter;
   background-color: #fff;
-  padding: 20px 0;;
+  padding: 20px 0;
 
   > .logo {
     width: 15%;
