--- a/src/app/components/job-list-horizontal/job-list-horizontal.component.html
+++ b/src/app/components/job-list-horizontal/job-list-horizontal.component.html
@@ -1,11 +1,11 @@
-<widget-job
-  *ngFor="let job of jobs"
-  thumbnail="true"
-  horizontal="true"
-  [job]="job"
-  (onSelect)="onSelect.emit($event)"
-  (onSave)="onSave.emit($event)"
-  (onViewCompany)="onViewCompany.emit($event)"
-  (onSelectCompany)="onSelectCompany.emit($event)"
->
-</widget-job>
+<ng-template ngFor let-job [ngForOf]="jobs" let-i="index" [ngForTrackBy]="trackBy">
+  <widget-job
+    thumbnail="true"
+    horizontal="true"
+    [job]="job"
+    (onSelect)="onSelect.emit($event)"
+    (onSave)="onSave.emit($event)"
+    (onViewCompany)="onViewCompany.emit($event)"
+    (onSelectCompany)="onSelectCompany.emit($event)"
+  ></widget-job>
+</ng-template>
