--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,4 +15,10 @@
       </widget-job-list>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-xs-12 text-center">
+      <span class="glyphicon glyphicon-refresh spinner"></span>
+    </div>
+  </div>
 </div>
