--- a/src/app/components/job-filter/job-filter.component.less
+++ b/src/app/components/job-filter/job-filter.component.less
@@ -65,3 +65,19 @@
     .button-variant(#fff; #9da1a3; #fff)
   }
 }
+
+.spinner {
+  @keyframes rotating {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  };
+
+  margin-top: 20px;
+  font-size: xx-large;
+  color: @text-muted;
+  animation: rotating 2s linear infinite;
+}
