--- a/src/app/modules/job-module/job-filter/job-filter.component.less
+++ b/src/app/modules/job-module/job-filter/job-filter.component.less
@@ -1,5 +1,5 @@
-@import "~bootstrap/less/mixins/buttons.less";
-@import "../../../assets/styles/bootstrap/variables.less";
+@import "../../../../../node_modules/bootstrap/less/mixins/buttons.less";
+@import "../../../../assets/styles/bootstrap/variables.less";
 
 .card {
   .card-title {
