moves to job-module to libs

--- a/src/libs/job-module/job-thumbnail-horizontal/job-thumbnail-horizontal.component.less
+++ b/src/libs/job-module/job-thumbnail-horizontal/job-thumbnail-horizontal.component.less
@@ -1,4 +1,4 @@
-@import "../../../../assets/styles/bootstrap/variables.less";
+@import "../../../assets/styles/bootstrap/variables.less";
 
 :host {
   display: flex;
