rename function from trackBy to trackByFunction

--- a/src/app/components/job-list-horizontal/job-list-horizontal.component.html
+++ b/src/app/components/job-list-horizontal/job-list-horizontal.component.html
@@ -1,4 +1,4 @@
-<ng-template ngFor let-job [ngForOf]="jobs" let-i="index" [ngForTrackBy]="trackBy">
+<ng-template ngFor let-job [ngForOf]="jobs" let-i="index" [ngForTrackBy]="trackByFunction">
   <widget-job
     thumbnail="true"
     horizontal="true"
