add filter resolver

--- a/src/app/views/jobs/search-job/search-job.component.html
+++ b/src/app/views/jobs/search-job/search-job.component.html
@@ -1,10 +1,7 @@
 <widget-job-filter
+  *ngIf="filter"
   [filter]="filter"
   [jobApi]="jobService.findBy"
-  [companyApi]="companyService.findBy"
-  [contractApi]="contractService.findBy"
-  [countryApi]="countryService.findBy"
-  [domainApi]="domainService.findBy"
   (filterChange)="doFilterChange($event)"
   (jobListChange)="doJobListChange($event)"
   (onReachToBottom)="doReachToBottom()"
