--- a/src/app/views/jobs/view-job/view-job.component.html
+++ b/src/app/views/jobs/view-job/view-job.component.html
@@ -1,3 +1,13 @@
+<div class="page-header">
+  <button
+    type="button"
+    class="btn btn-primary pull-right"
+    (click)="doBack()"
+  >
+    Retour
+  </button>
+  <h2>{{ job.title }}</h2>
+</div>
 <pre>
   job = {{ job | json }}
 </pre>
